objects/vlocity_ins__ProviderNetwork__c.object
<CustomObject>
    <description>A group of service providers such as physicians, hospitals or other providers that an insurance company has contracted with to provide services at prenegotiated rates to its members. Health care networks are typically organized for different types of health plans such as HMO, PPO and Medicare</description>
    <fields>
        <fullName>vlocity_ins__CarrierAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Carrier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Networks</relationshipLabel>
        <relationshipName>ProviderNetworkCarrierAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <defaultValue>(TODAY())</defaultValue>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineofBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Dental</fullName>
                </value>
                <value>
                    <fullName>Group Medical</fullName>
                </value>
                <value>
                    <fullName>Group Vision</fullName>
                </value>
                <value>
                    <fullName>Individual Dental</fullName>
                </value>
                <value>
                    <fullName>Individual Medical</fullName>
                </value>
                <value>
                    <fullName>Individual Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LocationDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentNetworkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Network</label>
        <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
        <relationshipName>ChildNetworks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RegionAvailability__c</fullName>
        <description>DEPRECATED.</description>
        <label>Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__State</valueSetName>
        </valueSet>
    </fields>
    <label>Provider Network</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Network</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Pharmacy</fullName>
        <active>true</active>
        <label>Pharmacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Producer</fullName>
        <active>true</active>
        <label>Producer</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Provider</fullName>
        <active>true</active>
        <label>Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>